<resources>
    <string name="app_name">Dart Scoreboard</string>
    <string name="darts_scoreboard">Darts Scoreboard</string>
    <string name="fiveo">501</string>
    <string name="threeo">301</string>
    <string name="seveno">170</string>
    <string name="addPlayer">Add Players</string>
    <string name="select">Select Game Type</string>
    <string name="undo">Undo</string>
    <string name="delete_player">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_player_confirm_question">Are you sure you want to delete </string>
    <string name="enter_score_string">Enter Score: </string>
    <string name="player_plate">Player</string>
    <string name="legs_plate">Legs</string>
    <string name="sets_plate">Sets</string>
    <string name="score_plate">Score</string>
    <string name="no_of_sets">Number of Sets</string>
    <string name="no_of_legs">Number of Legs</string>
    <string name="no_visits">Visits: </string>
    <string name="average">Average: </string>
    <string name="empty_slot_string">Empty Slot</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
<!--    <string name="match_created_date">s</string>-->

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="enter_name">Enter Name</string>
    <string name="ok_button">OK</string>
    <string name="start_game_button">Start Game</string>
    <string name="randomise_players_button">Randomise Players</string>
    <string name="add_players_button">Add Players</string>
    <string name="remove_all_players_button">Remove All Players</string>
    <string name="select_players">Select Players</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue Game</string>
    <string name="stats">Stats</string>
    <string name="manage_users">Manage Users</string>
    <string name="no_recent_games_alert">Looks like there\'s no recent games. Your recent matches will show here.</string>
    <string name="enter">ENTER</string>
    <string name="enter_score">Enter Score</string>
    <string name="training_reminders">Training Reminders</string>
    <string name="reminder_hint">Set a training reminder. Practicing frequently and often helps you to develop a routine and helps you to improve.</string>
    <string name="set_time">Set Time</string>
    <string name="live_pro_matches">Live Pro Matches</string>
    <string name="choose_date">Choose Date</string>
    <string name="avg_score">Avg Score</string>
    <string name="checkout_rate">Checkout Rate</string>
    <string name="win_rate">Win Rate</string>
    <string name="losses">losses</string>
    <string name="wins">wins</string>
    <string name="matches_played">Matches</string>
    <string name="percent">%</string>
    <string name="legs_won">Legs Won</string>
    <string name="leg_win_rate">Leg Win Rate</string>
    <string name="order_players">Order Players</string>
    <string name="dart_scoreboard">Dart Scoreboard</string>
    <string name="sign_in">Sign In</string>

</resources>