<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUserActivity">

    <include layout="@layout/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        android:padding="5dp"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="25dp"
        />

    <EditText
        android:id="@+id/enter_name_edit_text"
        android:hint="@string/enter_name"
        android:layout_width="146dp"
        android:layout_height="41dp"
        android:inputType="textCapWords"
        android:layout_gravity="end"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="80dp"
        android:autofillHints="username" />

    <Button
        android:id="@+id/cancel_create_player"
        android:layout_width="148dp"
        android:layout_height="57dp"
        android:layout_marginTop="200dp"
        android:layout_marginStart="25dp"
        android:text="@string/cancel"
        />

    <Button
        android:id="@+id/create_player_button"
        android:layout_width="148dp"
        android:layout_height="57dp"
        android:layout_gravity="end"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="512dp"
        android:text="@string/ok_button"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>