<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".match.presentation.SetupMatchActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="75dp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/select"
            >

            <AutoCompleteTextView
                android:id="@+id/gameTypeDropDownBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="none" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/legs_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_of_legs"
            >

            <AutoCompleteTextView
                android:id="@+id/legs_drop_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="none" />



        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/sets_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_of_sets"
            >

            <AutoCompleteTextView
                android:id="@+id/sets_drop_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="none" />



        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selected_players_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clipToPadding="false"
            android:layout_marginBottom="220dp"
            />

    </LinearLayout>

    <GridLayout
        android:id="@+id/bottom_button_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:useDefaultMargins="true"
        android:padding="16dp"
        android:background="?attr/colorSurface">

        <!-- Select Players Button -->
        <Button
            android:id="@+id/name_drop_down_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/square_button"
            android:text="@string/select_players"
            android:layout_margin="8dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill" />

        <!-- Randomise Players Button -->
        <Button
            android:id="@+id/randomise_players_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/square_button"
            android:text="@string/randomise_players_button"
            android:layout_margin="8dp"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"/>

        <!-- Remove Players Button -->
        <Button
            android:id="@+id/remove_players_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/square_button"
            android:text="@string/remove_all_players_button"
            android:layout_margin="8dp"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"/>

        <!-- Start Game Button -->
        <Button
            android:id="@+id/gameStartButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_game_button"
            android:layout_margin="8dp"
            android:background="@drawable/square_button"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"/>
    </GridLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>