<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".SelectGameActivity">

    <Button
        android:id="@+id/gameStartButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:layout_marginVertical="600dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="Start Game" />

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/custom_blue"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Select Game"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/select"
        android:translationY="100dp">

        <AutoCompleteTextView
            android:id="@+id/gameTypeDropDownBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/legs_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/no_of_legs"
        android:translationY="200dp">

        <AutoCompleteTextView
            android:id="@+id/legs_drop_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />



    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/sets_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/no_of_sets"
        android:translationY="300dp">

        <AutoCompleteTextView
            android:id="@+id/sets_drop_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />



    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/NameDropDownBox"
        android:layout_width="147dp"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:layout_marginVertical="600dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="Add Players"
        app:layout_anchorGravity="top|center" />

    <Button
        android:id="@+id/remove_players_button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_gravity="right"
        android:layout_marginVertical="525dp"
        android:layout_marginTop="44dp"
        android:layout_marginRight="16dp"
        android:text="Remove All Players" />

    <Button
        android:id="@+id/randomise_players_button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_gravity="left"
        android:layout_marginVertical="525dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:text="Randomise Players" />

    <TextView
        android:id="@+id/list_of_match_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:hint="No Players"
        android:translationY="400dp" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>